Fix blurry link hover: override global a:hover glow on NFT detail links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3788,7 +3788,11 @@ select option {
   word-break: break-all;
   align-items: flex-start;
 }
-
+.nft-detail-link:hover,
+.nft-detail-link:focus-visible {
+  filter: none;
+  text-shadow: none;
+}
 
 .nft-detail-ext-icon {
   font-style: normal;
